--- a/front/event/event.html
+++ b/front/event/event.html
@@ -46,7 +46,7 @@
                                 <a ng-click="gotoUser(user)">{{user.username}}</a>
                             </div>
                             <div class="col-xs-12 col-md-6 profiles"><br>
-                                <button class="btn btn-primary" ng-click="openReviewUserModal(user);">Review</button>
+                                <button class="btn btn-primary btn-sm" ng-click="openReviewUserModal(user);">Review</button>
                             </div>
                         </li>
                     </ul>
