--- a/front/navigation/navigation.html
+++ b/front/navigation/navigation.html
@@ -1,25 +1,15 @@
 <div class="container">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" ui-sref="search">FriendZone</a>
-    </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li ng-class="{active: setActive('/search')}"><a ui-sref="search">Search</a></li>
-            <li ng-class="{active: setActive('/admin')}"><a ui-sref="admin">Admin</a></li>
+            <li ng-class="{active: setActive('/admin')}" ng-show="isAdmin"><a ui-sref="admin">Admin</a></li>
         </ul>
         <div class="nav navbar-nav navbar-right">
             <form class="navbar-form" role="search">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control" ng-model="searchQuery">
                     <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        <button class="btn btn-default" ng-click="search(searchQuery);"><i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
                 </div>
