--- a/front/profile/profile.html
+++ b/front/profile/profile.html
@@ -24,14 +24,17 @@
                     <span class="pull-left"><strong>E-mail</strong></span>{{user.email}}&nbsp;
                 </li>
                 <li class="list-group-item text-right">
+                    <span class="pull-left"><strong>Gender</strong></span>{{user.gender}}&nbsp;
+                </li>
+                <li class="list-group-item text-right">
                     <span class="pull-left"><strong>Location</strong></span>{{user.location}}&nbsp;
                 </li>
                 <li class="list-group-item text-right">
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-default" ng-click="openEditProfile();">
+                    <button type="button" class="btn btn-default" ng-click="openEditProfile();" ng-show="self">
                         Edit
                     </button>
-                    <button type="button" class="btn btn-danger" ng-click="openReportModal();">
+                    <button type="button" class="btn btn-danger" ng-click="openReportModal();" ng-hide="self">
                         Report
                     </button>
                 </li>
@@ -42,7 +45,7 @@
                     <strong>Rating</strong></span>{{userRating}}&nbsp;
                 </li>
                 <li class="list-group-item text-right"><span class="pull-left">
-                    <strong>Events attended</strong></span>{{user.attended_events.length}}&nbsp;
+                    <strong>Events attended</strong></span>{{pastEvents.length}}&nbsp;
                 </li>
                 <li class="list-group-item text-right"><span class="pull-left">
                     <strong>Events created</strong></span>{{user.events.length}}&nbsp;
@@ -62,7 +65,7 @@
                 <uib-tab index="2" heading="Past Events">
                     <ul class="list-group">
                         <li class="list-group-item clearfix" ng-repeat="event in filteredPastEvents">
-                            <a>{{event.name}}</a>
+                            <a ng-click="gotoEvent(event);">{{event.name}}</a>
                         </li>
                     </ul>
                     <uib-pagination total-items="pastEvents.length" ng-model="currentPastPage" ng-change="pastPageChanged(currentPastPage)"></uib-pagination>
@@ -70,8 +73,27 @@
             </uib-tabset>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <div class="panel panel-default text-center">
+                <div class="panel-heading">
+                    <h3>Invites</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="list-group">
+                        <li class="list-group-item" ng-repeat="invite in filteredInvites">
+                            <a ng-click="gotoEvent(invite)">{{invite.name}}</a>
+                        </li>
+                    </ul>
+                    <uib-pagination total-items="invites.length" ng-model="currentInvitePage" ng-change="invitePageChanged(currentInvitePage)"></uib-pagination>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
+<script type="text/ng-template" id="edit-profile-modal">
+    <div ng-include src="'front/profile/user-modal.html'"/>
+</script>
 <script type="text/ng-template" id="report-modal">
     <div class="modal-header">
         <h3 class="modal-title">Report User</h3>
