changed title of html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="FriendZone">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>FriendZone</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="public/stylesheets/style.css">
