added html5 mode

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="FriendZone">
 <head>
     <meta charset="UTF-8">
+    <base href="/">
     <title>FriendZone</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
